# headless-diary-system

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PRIVACY.md  PROGRESS.md  README.md  diary-system-spec-multimedia-v2.md  diary-system-spec.md  docker-compose.dev.yml  docker-compose.yml  test_autocomplete.py  test_e2e.py  test_e2e_v2.py
api/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_geo_weather.py  003_add_tag_hierarchy.py  004_agent_task_enhancements.py  005_comment_threading_and_agent_posting.py
api/app/: config.py  database.py  main.py  seed.py
api/app/middleware/: auth.py  rate_limit.py  service_auth.py
api/app/models/: __init__.py  agent_task.py  comment.py  diary.py  media.py  reference.py  tag.py  user.py  version.py
api/app/routers/: agent.py  agent_service.py  auth.py  comment.py  diary.py  media.py  tag.py
api/app/schemas/: __init__.py  agent.py  comment.py  diary.py  media.py  tag.py  user.py
api/app/services/: agent_service.py  agent_user.py  diary_service.py  reference_service.py  tag_service.py  title_service.py
api/app/tasks/: __init__.py  agent_tasks.py  caption_tasks.py  retag_tasks.py  title_tasks.py
api/app/utils/: file_storage.py  geo_weather.py  markdown.py  media_storage.py
api/tests/: conftest.py  test_diary.py  test_tags.py
docs/: changelog-2026-03-26.md  deploy-china.md  deployment-https.md  plan-agent-system.md
nginx/: nginx.conf
web/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  (+1 more)
(+31 files in other folders)
